# ultimate-pdf

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/ultimate_pdf/: cli.py
src/ultimate_pdf/commands/: compress.py  decrypt.py  encrypt.py  image_to_pdf.py  info.py  markdown.py  merge.py  ocr.py  pdf_to_image.py  rotate.py  split.py  watermark.py
src/ultimate_pdf/core/: compressor.py  encryptor.py  encryptor_decryptor.py  exceptions.py  image_converter.py  info_extractor.py  markdown_exporter.py  merger.py  ocr.py  parser.py  rasterizer.py  rotator.py  splitter.py  validator.py  watermarker.py
tests/: test_compress.py  test_decrypt.py  test_encrypt.py  test_image_to_pdf.py  test_info_command.py  test_info_extractor.py  test_markdown.py  test_merge.py  test_ocr.py  test_parser.py  test_pdf_to_image.py  test_rotate.py  test_split.py  test_validator.py  test_version.py  test_watermark.py
