[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultimate-pdf"
version = "0.1.0"
description = "A powerful Python library and CLI for PDF processing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Naveen Kenchgunde", email = "naveenkenchgunde10@gmail.com" }
]

keywords = [
    "pdf",
    "python",
    "merge",
    "split",
    "compress",
    "cli"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "pypdf>=5.0.0",
    "typer>=0.16.0",
    "rich>=14.0.0",
    "PyMuPDF>=1.24.0",
]

[project.scripts]
ultimate-pdf = "ultimate_pdf.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]